[package]
name = "jazz-tools"
version = "2.0.0-alpha.0"
edition = "2024"
description = "Jazz local-first relational database core, runtime, client, and CLI."
license = "MIT OR Apache-2.0"
repository = "https://github.com/garden-co/jazz2"
autobenches = false
autotests = false

[lib]
name = "jazz_tools"
path = "src/lib.rs"
test = false

[[bin]]
name = "jazz-tools"
path = "src/main.rs"
required-features = ["cli"]
test = false

[features]
default = []
rocksdb = ["dep:rocksdb", "jazz-server/rocksdb"]
sqlite = ["dep:rusqlite"]
client = ["dep:thiserror", "server"]
server = [
  "dep:tokio",
  "dep:tokio-tungstenite",
  "dep:axum",
  "dep:tracing-subscriber",
  "dep:tower-http",
  "dep:async-stream",
  "dep:jsonwebtoken",
  "dep:bytes",
  "dep:reqwest",
]
cli = ["server", "rocksdb", "dep:clap", "dep:mimalloc"]
sync-autopsy = ["jazz/sync-autopsy"]
test-utils = ["server", "client", "sqlite", "sync-autopsy"]
test = ["test-utils", "cli"]
otel-core = [
  "server",
  "dep:opentelemetry",
  "dep:opentelemetry_sdk",
  "dep:opentelemetry-otlp",
  "dep:opentelemetry-stdout",
  "dep:opentelemetry-appender-tracing",
  "dep:tracing-opentelemetry",
]
otel = ["cli", "otel-core"]

[dependencies]
jazz = { workspace = true }
futures = "0.3"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "v5", "v7", "serde"] }
blake3 = "1"
hex = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
postcard = { version = "1", features = ["alloc"] }
jsonschema = { version = "0.42", default-features = false }
internment = "0.8"
smallvec = { version = "1.11", features = ["serde"] }
smolset = "1.3"
web-time = "1.1"
small-map = "0.1"
bitvec = "1.0"
ahash = "0.8"
sha2 = "0.10"

tokio = { version = "1", features = ["full"], optional = true }
rocksdb = { package = "rust-rocksdb", version = "0.48.0", default-features = false, features = ["lz4", "zstd"], optional = true }
rusqlite = { version = "0.34", features = ["bundled"], optional = true }

axum = { version = "0.7", features = ["ws"], optional = true }
tokio-tungstenite = { version = "0.24", features = [
  "rustls-tls-native-roots",
  "rustls-tls-webpki-roots",
], optional = true }
rustls = { version = "0.23", default-features = false, features = [
  "std",
  "tls12",
  "ring",
  "logging",
], optional = true }
rustls-native-certs = { version = "0.8", optional = true }
webpki-roots = { version = "0.26", optional = true }
bytes = { version = "1", optional = true }
clap = { version = "4", features = ["derive", "env"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
tower-http = { version = "0.5", features = ["cors", "trace"], optional = true }
async-stream = { version = "0.3", optional = true }
jsonwebtoken = { version = "9", optional = true }
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
mimalloc = { version = "0.1", default-features = false, optional = true }

reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "stream",
  "rustls-tls",
], optional = true }
thiserror = { version = "1", optional = true }

opentelemetry = { version = "0.31", optional = true }
opentelemetry_sdk = { version = "0.31", features = [
  "rt-tokio",
  "logs",
  "metrics",
], optional = true }
opentelemetry-otlp = { version = "0.31", features = [
  "grpc-tonic",
  "http-json",
  "reqwest-blocking-client",
  "logs",
  "metrics",
], optional = true }
opentelemetry-stdout = { version = "0.31", features = ["trace"], optional = true }
opentelemetry-appender-tracing = { version = "0.31", optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }
lz4_flex = "0.13.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
jazz-server = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3", features = ["futures"] }

[dev-dependencies]
# Test-only: exposes `InMemoryMetricExporter` for asserting observed metric
# values. Scoped to dev-dependencies so the `testing` feature never reaches a
# production build (Cargo enables dev-dependency features only for tests).
opentelemetry_sdk = { version = "0.31", features = ["testing"] }
criterion = "0.5"
insta = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "stream",
  "rustls-tls",
] }
bytes = "1"
tempfile = "3"
jsonwebtoken = "9"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
futures = "0.3"
tokio = { version = "1", features = ["test-util", "full"] }
tower = { version = "0.5", features = ["util"] }
rcgen = { version = "0.13", default-features = false, features = ["ring"] }

# Keep the active benchmark harness explicit. Old deep-internal RuntimeCore
# benchmark sources are not retained here; reintroduce scenarios only after
# porting them to the public core API.
[[bench]]
name = "observer_write_path"
harness = false

[[bench]]
name = "db_benchmark"
harness = false

[[bench]]
name = "authorization_scope_benchmark"
harness = false

[[bench]]
name = "realistic_phase1"
harness = false

[[bench]]
name = "insert_benchmark"
harness = false

[[bench]]
name = "update_benchmark"
harness = false

[[bench]]
name = "subscription_benchmark"
harness = false

[[test]]
name = "large_blob_permissions"
required-features = ["test"]

[[test]]
name = "branch_claims_integration"
required-features = ["test"]

[[test]]
name = "inherited_policies"
required-features = ["test"]

[[test]]
name = "scope_revocation"
required-features = ["test"]

[[test]]
name = "transactions"
required-features = ["test-utils"]

[[example]]
name = "realistic_bench"
required-features = ["client"]
