[package]
name = "jazz-transport"
version = "2.0.0-alpha.0"
edition = "2024"
description = "Shared transport types for Jazz client/server sync."
license = "MIT OR Apache-2.0"
repository = "https://github.com/garden-co/jazz2"

[dependencies]
groove = { package = "jazz-core", path = "../groove", version = "2.0.0-alpha.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
