[package]
name = "jazz-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for the Jazz database engine"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
jazz_tools = { package = "jazz-tools", path = "../jazz-tools", version = "2.0.0-alpha.0", default-features = false, features = [
  "transport",
] }

ws_stream_wasm = "0.7"
futures = "0.3"

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
serde_bytes = "0.11"
tsify = { version = "0.4", features = ["js"] }
console_error_panic_hook = { version = "0.1", optional = true }
tracing = "0.1"
wasm-tracing = { package = "jazz-wasm-tracing", path = "../wasm-tracing", version = "3.0.0-alpha.0" }
uuid = { version = "1.0", features = ["v7", "serde", "js"] }
smallvec = { version = "1.13", features = ["serde"] }
web-time = "1.1"
getrandom = { version = "0.2", features = ["js"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
base64 = "0.22"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }


[dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
web-sys = { version = "0.3", features = [
  "FileSystemDirectoryHandle",
  "StorageManager",
  "Navigator",
  "WorkerGlobalScope",
  "WorkerNavigator",
] }

[features]
default = ["console_error_panic_hook"]

# `wasm-opt` here REPLACES wasm-pack's defaults, so we must include `-O` ourselves
# or optimization is silently disabled. `-g` preserves debug info for profiling builds.
# See https://github.com/DataDog/js-instrumentation-wasm/pull/12
[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ["-O", "-g"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "-g"]
