[package]
name = "jazz-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for the Jazz database engine"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
vendored_core_wasm = { package = "jazz-core-wasm", path = "../../vendor/jazz_core/jazz-wasm" }
jazz-tools = { path = "../jazz-tools" }
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }
uuid = { version = "1.0", features = ["v7", "serde", "js"] }
web-time = "1.1"
base64 = "0.22"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom02 = { package = "getrandom", version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
web-sys = { version = "0.3", features = [
  "FileSystemDirectoryHandle",
  "MessageChannel",
  "StorageManager",
  "Navigator",
  "WorkerGlobalScope",
  "WorkerNavigator",
] }

[features]
default = ["console_error_panic_hook"]

# `wasm-opt` here REPLACES wasm-pack's defaults, so we must include `-O` ourselves
# or optimization is silently disabled. `-g` preserves debug info for profiling builds.
# See https://github.com/DataDog/js-instrumentation-wasm/pull/12
[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ["-O", "-g"]

# `-O` (level 2) matched higher levels in our runtime benchmarks, so we stop there.
# `-g` is kept because it had no measurable impact on runtime or output size,
# and it preserves the wasm `name` section so function names appear in profilers.
# wasm-pack only recognizes the profile names `dev`/`profiling`/`release`; any other
# name is silently ignored and wasm-pack falls back to its built-in defaults.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "-g"]
