[package]
name = "jazz-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for the Jazz database engine"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
jazz-wasm-tracing = { path = "../wasm-tracing" }
tracing = "0.1"
base64 = "0.22"
console_error_panic_hook = { version = "0.1", optional = true }
ed25519-dalek = "2"
futures-util = "0.3.31"
jazz = { path = "../jazz", default-features = false }
js-sys = "0.3.82"
opfs-btree = { path = "../opfs-btree" }
postcard = { version = "1.1.3", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1"
sha2 = "0.10"
uuid = { version = "1.18.1", features = ["v5", "v7", "serde", "js"] }
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"
web-time = "1.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom02 = { package = "getrandom", version = "0.2", features = ["js"] }
talc = "5.0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
web-sys = { version = "0.3", features = [
  "FileSystemDirectoryHandle",
  "MessageChannel",
  "StorageManager",
  "Navigator",
  "WorkerGlobalScope",
  "WorkerNavigator",
] }

[features]
default = ["console_error_panic_hook", "transport-compression-ruzstd"]
bench-probes = []
transport-compression-lz4 = ["jazz/transport-compression-lz4"]
transport-compression-zstd = ["jazz/transport-compression-zstd"]
transport-compression-ruzstd = ["jazz/transport-compression-ruzstd"]

# `wasm-opt` here REPLACES wasm-pack's defaults, so we must include `-O` ourselves
# or optimization is silently disabled. `-g` preserves debug info for profiling builds.
# See https://github.com/DataDog/js-instrumentation-wasm/pull/12
[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ["-O", "-g"]

# `-O` (level 2) matched higher levels in our runtime benchmarks, so we stop there.
# `-g` is kept because it had no measurable impact on runtime or output size,
# and it preserves the wasm `name` section so function names appear in profilers.
# wasm-pack only recognizes the profile names `dev`/`profiling`/`release`; any other
# name is silently ignored and wasm-pack falls back to its built-in defaults.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "-g"]
