[package]
name = "jazz"
version = "0.1.0"
edition = "2024"

[features]
default = ["rocksdb", "transport-compression-zstd"]
rocksdb = ["groove/rocksdb"]
sync-autopsy = []
testing = []
transport-compression-lz4 = ["dep:lz4_flex"]
transport-compression-zstd = ["dep:zstd"]
transport-compression-ruzstd = ["dep:ruzstd"]

[dependencies]
tracing = "0.1"
futures-core = "0.3.31"
futures-channel = "0.3.31"
blake3 = "1"
groove = { workspace = true, default-features = false }
lz4_flex = { version = "0.11.5", default-features = false, features = ["frame"], optional = true }
postcard = { version = "1.1.3", features = ["alloc"] }
ruzstd = { version = "0.8.2", default-features = false, optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
uuid = { version = "1.18.1", features = ["serde", "v5", "v7"] }
web-time = "1.1"
zstd = { version = "0.13.3", optional = true }

[dev-dependencies]
hdrhistogram = "7.5.4"
tempfile = "3.27.0"

[[bench]]
name = "validation"
harness = false

[[bench]]
name = "sync"
harness = false

[[bench]]
name = "cold_subscription"
harness = false

[[bench]]
name = "large_value_checkpointing"
harness = false

[[bench]]
name = "merge_back_cost"
harness = false
