[package]
name = "mini-jazz-sqlite-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
mini-jazz-sqlite = { path = "../mini-jazz-sqlite" }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
sqlite-wasm-rs = "0.5"
sqlite-wasm-vfs = "0.2"
