[package]
name = "mini-jazz-sqlite-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
mini-jazz-sqlite = { path = "../mini-jazz-sqlite" }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
sqlite-wasm-rs = "0.5"
sqlite-wasm-vfs = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

# `wasm-opt` here REPLACES wasm-pack's defaults, so include `-O` explicitly.
# `-g` preserves the wasm `name` section so browser profilers show Rust symbols.
[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ["-O", "-g"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "-g"]
